apps/1-dashboard/09_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: "internal"
    prometheus.io/probe: "true"
spec:
  tls:
  - hosts:
    - dashboard.k8s.grigri
    secretName: dashboard-tls
  rules:
  - host: dashboard.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
